# news-fetcher-agent

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  alembic.ini  init.py  main.py  news.db  pyproject.toml  run.py
alembic/: env.py
alembic/versions/: 30fe55e13749_add_comment_html_column_to_posts.py  3fcb7993b009_sync_database_state_with_models.py  4202fbeac7ba_add_comment_html_to_posts.py  6baed0fbaebe_initial_schema.py  6ef7946c5f4a_update_news_model_to_match_post_class.py  cdf5af70cf95_rename_news_table_to_posts.py  d373f6f8fba9_sync_database_state_with_models.py  f01dcbc87140_initial_schema.py  f143c6a69210_initial_schema.py  f9eff688f955_remove_content_field_from_posts_table.py
docs/: reddit_item.py  reddit_sample.html
scripts/: add_comment_html_column.py  fetch_comments.py  fetch_news.py  migrate_to_supabase.py  seed_database.py
src/: main.py
src/apis/: database.py  main.py  models.py
src/app_types/: __init__.py  post.py
src/utils/: app_utils.py  app_utils_test.py  hnews_fetch.py  reddit_ArtificialInteligence.yaml  reddit_ChatGPTPro.yaml  reddit_LocalLLaMA.yaml  reddit_Python.yaml  reddit_cybersecurity.yaml  reddit_fetch.py  reddit_netsec.yaml  reddit_react.yaml  reddit_softwarearchitecture.yaml  reddit_webdev.yaml  yaml_fetch.py
ui/: index.html  package.json  pnpm-lock.yaml
ui/src/: App.tsx  index.css  main.tsx
ui/src/components/: App.tsx  Header.tsx  NewsList.tsx  PostContent.tsx  PostListItem.tsx  PostsList.tsx  SourceSelector.tsx  SubSelector.tsx
ui/src/pages/: NewsPage.tsx  PostsPage.tsx
ui/src/utils/: apolloClient.ts  cacheUtils.ts  (+2 more)
