[project]
name = "news-fetcher-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crawl4ai>=0.5.0.post8",
    "dotenv>=0.9.9",
    "mypy>=1.15.0",
    "openai-agents>=0.0.8",
    "pyright>=1.1.398",
    "ruff>=0.11.4",
    "types-pyyaml>=6.0.12.20250402",
    "types-requests>=2.32.0.20250328",
]

