[project]
name = "myapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.15.2",
    "asyncio>=3.4.3",
    "crawl4ai>=0.5.0.post8",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.115.12",
    "graphql-core>=3.2.6",
    "httptools>=0.6.4",
    "mako>=1.3.10",
    "mypy>=1.15.0",
    "openai-agents>=0.0.9",
    "playwright>=1.51.0",
    "psycopg2>=2.9.10",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.2",
    "pyright>=1.1.398",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "python-dateutil>=2.9.0.post0",
    "ruff>=0.11.4",
    "six>=1.17.0",
    "sqlalchemy>=2.0.40",
    "strawberry-graphql>=0.263.2",
    "types-pyyaml>=6.0.12.20250402",
    "types-requests>=2.32.0.20250328",
    "uvicorn>=0.34.0",
    "uvloop>=0.21.0",
    "watchfiles>=1.0.5",
    "websockets>=15.0.1",
]

[tool.uv.workspace]
members = ["webapp/backend"]
